--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "jquery": "^2.1.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "passport": "^0.3.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.0-rc3",
+    "react-router": "^1.0.3",
     "socket.io": "^1.3.7",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
