--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "bootstrap-webpack": "0.0.5",
+    "cookie-parser": "^1.4.0",
     "css-loader": "^0.19.0",
     "exports-loader": "^0.6.2",
     "express": "^4.13.3",
@@ -27,6 +28,7 @@
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.3",
     "react-router": "^1.0.3",
