--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "less-loader": "^2.2.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "react": "^0.14.0",
+    "react": "^0.14.6",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.3",
+    "react-router": "2.0.0-rc4",
     "socket.io": "^1.3.7",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
